--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer class="footer">
+    <div class="row container">
+        <h2>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</h2>
+    </div>
 
 </footer>
