Changes to mobile sass

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -28,8 +28,8 @@
   <div class="container">
     <div class="row content">
       <h1>My philosophy</h1>
-      <p>Music + Art = Life is the equation that defines who I am. Music has a way of moving the soul closer to heaven to experience the fulness of our creator. 
-      Art is God's way of making everyday of painting pictures that can only be experienced once in a lifetime. This is what defines me. This is who I am. This is my philosophy. </p>
+      <p>Music + Art = Life is the equation that defines who I am. Music has a way of moving the soul closer to heaven where we experience the fullness of our creator. 
+      Art is God's brush stroke manifested through the eyes, hearts, and spirits of everyday people. This is what defines me. This is who I am. This is my philosophy. </p>
     </div>
   </div>
 </div>
