--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!--<link rel="stylesheet" href="../../css/node_modules/nomalize.css/normalize.css" type="text/css" />-->
 </head>
