--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,9 @@
 <footer class="footer">
-  <div class="row container">
-    <div class="contact col-lg-4">
-      <p>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</p>
-    </div>
-    
-     <div class="contact col-lg-4">
-      <p>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</p>
-    </div>
-    
-     <div class="contact col-lg-4">
-      <p>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</p>
-    </div>
-    
+  <div class="container">
+    <div class="row">
+      <div class="contact">
+        <h2>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</h2>
+      </div>
+    </div> 
   </div>
 </footer>
