fixed footer email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="contact">
-        <h2>Feel free to get <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><span style="color: #cccccc">@</span></a> me.</h2>
+        <h2>Feel free to get <a href="mailto:baise.thomas@gmail.com?Subject=Hello%20again" target="_top"><span style="color: red">@</span></a> me.</h2>
       </div>
     </div> 
   </div>
