Changes to file structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,10 @@
     {% include header.html %}
 
     {% include content.html %}
+    
+    {% include philosophy.html %}
+    
+    {% include skills.html %}
 
   
     {% include footer.html %}
